...
    android:layout_height="match_parent"
    android:background="@color/pastel_blue"
    tools:context=".ui.inventory.InventoryActivity">


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/inventoryDisplayView"
        android:layout_width="match_parent"
        android:layout_height="640dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="76dp"
        android:layout_marginRight="30dp"
        app:layout_constraintEnd_toEndOf="parent"
...
        android:layout_marginRight="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/backButton"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:background="@drawable/bg_edit"
        android:text="@string/stats_return"
        android:textColor="@color/pastel_red"
        android:textStyle="bold"
...
